fix: change z-index in header

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   transition: .2s;
-  z-index: 1;
+  z-index: 3;
 
   &__logo {
     @include resetLink();
@@ -120,7 +120,7 @@
     min-height: 170px;
     min-width: 267px;
     padding: 27px 20px;
-    z-index: 1;
+    z-index: 3;
 
     background: var(--panelColor);
 
